# hpc-code-learnig-process

./: README.md  智能指针  智能指针优化下的双向链表.cpp
cuda/: ball_simulation
cuda/ball_simulation/: README.md  ball_simulation1.cu  ball_simulation_AOS.cu  ball_simulation_SOA.cu
cuda/martix/: README.md
cuda/reduce/: README.md
cudadocs/: reduce_1.cu  reduce_add_during_load.cpp  reduce_bancconflict_.cu  reduce_shared_1.cu  合理设置block数量.cu  完全循环展开.cu  循环展开优化.cu
多线程&现代cpp特性/: README.md  time function.cpp
智能指针docs/: 智能指针优化下的双向链表.cpp
模板/: README.md
模板/模板汇总/: CMakeLists.txt  FixedVector.h  README.md  main.cpp  using_assert.md  vector_lib.h
模板/模板汇总练习！！！/: CMakeLists.txt  README.md  cpp_type_name.h  main.cpp
